# nsh

./: .clang-format  .clang-tidy  .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  LinkerScript.ld  README.md  shellf4 Run.cfg
.githooks/: log.sh  pre-commit
.github/workflows/: build.yml  create-release-on-project-closed.yml
HAL_Driver/Inc/: stm32f4xx_hal_conf.h
HAL_Driver/Src/: stm32f4xx_hal_timebase_rtc_alarm_template.c  stm32f4xx_hal_timebase_rtc_wakeup_template.c
cmake/Modules/: Coverage.cmake  FindGDB.cmake  FindOpenOCD.cmake  FixedString.cmake  ForceColoredOutput.cmake  GoogleTest.cmake  Option.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Warnings.cmake
cmake/Modules/GoogleTest/: 0001-Always-use-colors-if-requested-by-user.patch  0001-Use-if-to-check-filesystem-support.patch  gtest_patch.cmake
cmake/Scripts/: NshCommon.cmake  NshPlatformChecker.cmake  NshSetup.cmake  StaticAnalyzers.cmake
cmake/Toolchains/: Stm32Gcc.cmake
cmake/Toolchains/Stm32Gcc/: stm32-cmake_patch.cmake
inc/: main.h  stm32f4xx_it.h
include/nsh/: nsh.h  nsh.hpp  nsh_cmd.h  nsh_cmd.hpp  nsh_cmd_array.h  nsh_cmd_array.hpp  nsh_cmd_builtins.h  nsh_cmd_builtins.hpp  nsh_common_defs.h  nsh_common_defs.hpp  nsh_config.h  nsh_config.hpp  nsh_history.h  nsh_history.hpp  nsh_io.h  nsh_io_plugin.h  nsh_io_plugin.hpp  nsh_io_plugin_default.h  nsh_io_plugin_default.hpp  nsh_line_buffer.h  nsh_line_buffer.hpp  nsh_version.h.in  shell.h  shell_cmd.h  shell_cmd_builtins.h  shell_common_defs.h  shell_config.h  shell_history.h  shell_io.h  shell_line_buffer.h
nsh/: CMakeLists.txt
nsh/include/nsh/: nsh_cmd_array.h  nsh_cmd_builtins.h  nsh_common_defs.h  nsh_history.h  nsh_io_plugin.h  nsh_io_plugin_default.h
nsh/src/: nsh.c  nsh_io_plugin_default.c
nsh/test/integrations/: CMakeLists.txt  main.cpp
nsh/test/units/: CMakeLists.txt
nshpp/: CMakeLists.txt
nshpp/include/nshpp/: Binding.hpp  IOModule.hpp  StaticBinding.hpp  Stdio.hpp  nsh.hpp
nshpp/src/: Stdio.cpp
nshpp/test/: BindingConcept.test.cpp  CMakeLists.txt  StaticBinding.test.cpp  main.cpp
nshpp/test/meta/: TypeList.test.cpp
nshrs/: Cargo.toml
nshrs/libs/nostd/: Cargo.toml
nshrs/libs/nostd/src/: lib.rs
nshrs/libs/nostd/src/collections/: mod.rs
nshrs/libs/nostd/src/collections/fixed_ring_buffer/: mod.rs
nshrs/libs/nostd/src/collections/fixed_string/: mod.rs
nshrs/src/: fixed_ring_buffer.rs  fixed_string.rs  main.rs  sized_string.rs
platform/Native/: Platform.cmake
platform/Native/tools-main/: CMakeLists.txt  main.cpp
platform/Stm32NucleoF411RE/: Platform.cmake
platform/Stm32NucleoF411RE/gtest/: CMakeLists.txt  main.cpp  syscalls.c
platform/Stm32NucleoF411RE/gtest-main/: CMakeLists.txt  gtest-main.cpp
platform/Stm32NucleoF411RE/gtestmain/: main.cpp
platform/Stm32NucleoF411RE/tools-main/: CMakeLists.txt  tools-main.cpp
shell/: shell.c  shell.h  shell_cmd.c  shell_cmd.h  shell_cmd_builtins.c  shell_cmd_builtins.h  shell_common_defs.h  shell_config.h  shell_history.c  shell_history.h  shell_io.c  shell_io.h  shell_line_buffer.c  shell_line_buffer.h
src/: main.c  nsh.c  nsh.cpp  nsh_cmd.c  nsh_cmd.cpp  nsh_cmd_array.c  nsh_cmd_array.cpp  nsh_cmd_builtins.c  nsh_cmd_builtins.cpp  nsh_history.c  nsh_history.cpp  nsh_io.c  nsh_io_plugin.c  nsh_io_plugin_default.c  nsh_io_plugin_default.cpp  nsh_line_buffer.c  nsh_line_buffer.cpp  shell.c  shell_cmd.c  shell_cmd_builtins.c  shell_history.c  shell_io.c  shell_line_buffer.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  system_stm32f4xx.c
src/include/nsh/: nsh_io_plugin_default_impl.h  nsh_io_plugin_default_impl.hpp
test/: CMakeLists.txt  send_cmds.c  send_help.c  simple_shell.c  test.cpp
test/Stm32NucleoF411RE/: CMakeLists.txt  main.cpp  main.h  startup_stm32f411xe.s  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h  syscalls.c  system_stm32f4xx.c
test/nshpp/: CMakeLists.txt  main.cpp  nsh.hpp
test/nshpp/include/: Binding.hpp  StaticBinding.hpp  Stdio.hpp  nsh.hpp
test/nshpp/include/meta/: FixedString.hpp  TypeList.hpp
test/nshpp/src/: StaticBinding.test.cpp  Stdio.cpp  main.cpp
test/nshpp/src/meta/: TypeList.test.cpp
test/simple_shell/: CMakeLists.txt  simple_shell.c  simple_shell.cpp
test/units/: CMakeLists.txt  test.cpp  test_nsh_cmd.cpp  test_nsh_cmd_array.cpp  test_nsh_history.cpp  test_nsh_line_buffer.cpp
tools/simple_shell/: CMakeLists.txt  simple_shell.cpp
tools/size-report/: CMakeLists.txt  GetCompileOptions.cmake  PrintCompileOptions.cmake  main.c  main.cpp  report-nsh
tools/termios-test-app/: CMakeLists.txt  termios-test-app.cpp
